--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -580,39 +580,39 @@ msgctxt "field:offered.product-extra_data,write_uid:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,coverage:"
+msgctxt "field:offered.product-option.description,coverage:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,create_date:"
+msgctxt "field:offered.product-option.description,create_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,create_date_:"
+msgctxt "field:offered.product-option.description,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:offered.product-options-coverage,create_uid:"
+msgctxt "field:offered.product-option.description,create_uid:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,id:"
+msgctxt "field:offered.product-option.description,id:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,product:"
+msgctxt "field:offered.product-option.description,product:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,rec_name:"
+msgctxt "field:offered.product-option.description,rec_name:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,write_date:"
+msgctxt "field:offered.product-option.description,write_date:"
 msgid ""
 msgstr " "
 
-msgctxt "field:offered.product-options-coverage,write_uid:"
+msgctxt "field:offered.product-option.description,write_uid:"
 msgid ""
 msgstr " "
 
@@ -704,7 +704,7 @@ msgctxt "model:offered.product-extra_data,name:"
 msgid ""
 msgstr " "
 
-msgctxt "model:offered.product-options-coverage,name:"
+msgctxt "model:offered.product-option.description,name:"
 msgid ""
 msgstr " "
 
