Renaming process.code with process.action

--- a/modules/coop_process/locale/fr_FR.po
+++ b/modules/coop_process/locale/fr_FR.po
@@ -198,7 +198,7 @@ msgctxt "field:ir.export_package,steps:"
 msgid "Steps"
 msgstr "Etapes"
 
-msgctxt "field:process.code,create_date_:"
+msgctxt "field:process.action,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
