Renaming process.process_desc with process

--- a/modules/claim_process/locale/fr_FR.po
+++ b/modules/claim_process/locale/fr_FR.po
@@ -106,11 +106,11 @@ msgctxt "model:ir.ui.menu,name:menu_start_declaration"
 msgid "Start Declaration"
 msgstr "Commencer la Déclaration"
 
-msgctxt "selection:process.process_desc,kind:"
+msgctxt "selection:process,kind:"
 msgid "Claim Declaration"
 msgstr "Claim Declaration"
 
-msgctxt "selection:process.process_desc,kind:"
+msgctxt "selection:process,kind:"
 msgid "Claim Reopening"
 msgstr "Réouverture de Sinistre"
 
