--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -174,35 +174,35 @@ msgctxt "field:process.process_framework,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:process.process_menu_relation,create_date:"
+msgctxt "field:process-menu,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:process.process_menu_relation,create_uid:"
+msgctxt "field:process-menu,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:process.process_menu_relation,id:"
+msgctxt "field:process-menu,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:process.process_menu_relation,menu:"
+msgctxt "field:process-menu,menu:"
 msgid "Menu"
 msgstr "Menu"
 
-msgctxt "field:process.process_menu_relation,process:"
+msgctxt "field:process-menu,process:"
 msgid "Process"
 msgstr "Processus"
 
-msgctxt "field:process.process_menu_relation,rec_name:"
+msgctxt "field:process-menu,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:process.process_menu_relation,write_date:"
+msgctxt "field:process-menu,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:process.process_menu_relation,write_uid:"
+msgctxt "field:process-menu,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -530,7 +530,7 @@ msgctxt "model:process.process_framework,name:"
 msgid "Process Framework"
 msgstr ""
 
-msgctxt "model:process.process_menu_relation,name:"
+msgctxt "model:process-menu,name:"
 msgid "Process Menu Relation"
 msgstr "Relation Processus Menu"
 
