--- a/modules/process/locale/fr_FR.po
+++ b/modules/process/locale/fr_FR.po
@@ -338,35 +338,35 @@ msgctxt "field:process.step,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:process.step_desc_authorization,create_date:"
+msgctxt "field:process.step-group,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:process.step_desc_authorization,create_uid:"
+msgctxt "field:process.step-group,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:process.step_desc_authorization,group:"
+msgctxt "field:process.step-group,group:"
 msgid "Group"
 msgstr "Groupe"
 
-msgctxt "field:process.step_desc_authorization,id:"
+msgctxt "field:process.step-group,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:process.step_desc_authorization,rec_name:"
+msgctxt "field:process.step-group,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:process.step_desc_authorization,step_desc:"
+msgctxt "field:process.step-group,step_desc:"
 msgid "Step Desc"
 msgstr "Descripteur d'Etape"
 
-msgctxt "field:process.step_desc_authorization,write_date:"
+msgctxt "field:process.step-group,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:process.step_desc_authorization,write_uid:"
+msgctxt "field:process.step-group,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -546,7 +546,7 @@ msgctxt "model:process.step,name:"
 msgid "Step Descriptor"
 msgstr "Descripteur d'Etape"
 
-msgctxt "model:process.step_desc_authorization,name:"
+msgctxt "model:process.step-group,name:"
 msgid "Step Desc Authorization"
 msgstr "Autorisations pour l'Etape"
 
